modified:   400/index.html 	modified:   401/index.html 	modified:   403/index.html 	modified:   404/index.html 	modified:   500/index.html 	modified:   config-router.json 	modified:   package-lock.json 	modified:   package.json 	modified:   public/index.html 	modified:   src/assets/css/hp-about/hp-about.css 	modified:   src/assets/css/hp-about/hp-about.media.css 	modified:   src/assets/css/hp-header/hp-header.css 	modified:   src/assets/css/hp-header/hp-header.mobile.css 	modified:   src/assets/css/hp-referenzen/hp-referenzen.css 	modified:   src/assets/css/main.css 	new file:   src/assets/fonts/bitwise/!DigitalGraphicLabs.html 	new file:   src/assets/fonts/bitwise/!license.txt 	new file:   src/assets/fonts/bitwise/bitwise.ttf 	new file:   src/assets/fonts/dec_terminal_modern/_decterm.ttf 	new file:   src/assets/img/homescreen/oldtvframe.png 	modified:   src/assets/js/config/getConfig.js 	modified:   src/assets/js/main.js 	modified:   src/assets/json/ref-config.json 	modified:   src/components/_loader/loader.vue 	modified:   src/components/homepage/hp-about.vue 	modified:   src/components/homepage/hp-header.vue 	modified:   src/components/homepage/hp-referenzen.vue 	modified:   src/components/homepage/work/_more-work.vue 	modified:   src/components/homepage/work/bmw-work.vue 	modified:   src/components/homepage/work/opel-work.vue 	modified:   src/components/homepage/work/yaeow-work.vue 	modified:   src/components/legal/legal.vue 	modified:   src/components/work/work.vue 	modified:   src/components/work/work/BMW_M235i/index.html 	modified:   src/components/work/work/Freikost_Deinet/index.html 	modified:   src/components/work/work/OpelZafira/index.html 	modified:   src/components/work/work/Phenixgamesde/index.html 	modified:   src/components/work/work/TagderoffenenTuer2019/index.html 	modified:   src/components/work/work/test/test2/index.html 	modified:   src/components/work/work/yaeow-im_not_the_one_lyrics/index.html 	modified:   src/views/Home.vue 	modified:   under

--- a/src/assets/css/hp-referenzen/hp-referenzen.css
+++ b/src/assets/css/hp-referenzen/hp-referenzen.css
@@ -74,10 +74,22 @@
 }
 
 .hp-ref-body {
-    text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 80%;
 }
 
 .hp-ref-ctn {
     width: 300px;
-    height: 100px;
+    height: fit-content;
+    margin: 10px 30px;
+    padding: 30px;
+    float: left;
+    background-position: center !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
 }
