--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,20 @@
+@import url('./media.css');
+
 :root {
-  --white: rgb(226, 226, 226)
+  --white: rgb(226, 226, 226);
+  --black: #1e1e1e;
 }
 
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
 body,
 html {
-  font-family: "Whitney", sans-serif;
-  height: 100%;
-  background: #1e1e1e;
+  margin: 0;
+  padding: 0;
+  font-family: roboto, sans-serif;
+  background: rgb(202, 202, 202);
 }
 
 .top_page {
@@ -26,7 +28,7 @@ html {
 
   position: absolute;
   left: 50%;
-  top: 20vh;
+  top: 10vh;
 
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
@@ -35,10 +37,14 @@ html {
   -o-transform: translateX(-50%);
 }
 
+.head_text h1 {
+  font-size: 2.4rem;
+}
+
 .head_arrows {
   text-align: center;
   position: absolute;
-  top: 43vh;
+  top: 35vh;
   left: 50%;
 
   transform: translateX(-50%);
@@ -73,13 +79,14 @@ html {
 
 .about_me {
   padding: 90px 80px;
-  height: 100vh
+  height: 100vh;
+  background: var(--black);
 }
 
 .about_me_left {
   width: 50%;
   float: left;
-  padding: 150px 100px 0 100px;
+  padding: 5% 100px 0 100px;
   font-weight: 520
 }
 
@@ -92,7 +99,6 @@ html {
   width: 50%;
   float: right;
 }
-
 
 .references {
   background: var(--white);
@@ -129,5 +135,58 @@ html {
 }
 
 .references main {
-  padding: 10px 0;
+  padding: 90px 0;
+}
+
+.p_info {
+  padding: 30px;
+  width: 50%;
+  float: left;
+}
+
+.p_info h1 {
+  font-size: 4rem;
+}
+
+.p_info h4 {
+  font-size: 1.4rem;
+}
+
+.p_info h1,
+.p_info h4 {
+  text-align: left;
+}
+
+.p_info p {
+  text-align: left;
+  margin: 0 0 70px 0;
+}
+
+.p_links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: -30px 0 0 0;
+}
+
+.p_links h5 {
+  margin: 0 10px;
+}
+
+.p_links img {
+  margin: 0 0 0 20px;
+}
+
+.p_img{
+  width: 50%;
+  float: right;
+  text-align: right;
+  padding: 20px;
+}
+
+.p_img img:first-of-type,
+.p_img video {
+  margin: 200px 0 0 0;
+  width: 100%;
+  border: 6px solid black;
 }
