--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/slider/slider.css" />
+        <link rel="stylesheet" href="css/slider/my-slider.css" />
         <link rel="stylesheet" href="css/dc_profile/dc_profile.css" />
         <link rel="stylesheet" href="https://www.blackdayz.de/Library/CSS/V0_0_1/BlackCSS.css" />
     </head>
@@ -33,10 +33,10 @@
                         old and a <span class="red">Junior</span> Web Developer living in Germany</p>
                     <br />
                     <p><img src="img/icons/degree-42.png" width="42" />At the moment I am completing my training as a
-                        technical design assistant </p>
+                        <strong>technical design assistant</strong> </p>
                     <br />
                     <p><img src="img/icons/cloud-48.png" width="42" /> Most of the days i'm working on projects like
-                        websites or my own Discord Bot</p>
+                        websites or my own Discord Bot.. or uhm.. just playing games :)</p>
                 </div>
 
 
@@ -67,8 +67,8 @@
                                         <div class="tooltip tooltip-up">Tooltip</div>
                                     </div> -->
                                         <div class="badge-item">
-                                            <img src="img/badges/bravery.webp" alt="" />
-                                            <div class="tooltip tooltip-up">Tooltip</div>
+                                            <img src="img/badges/hypesquad.webp" alt="" />
+                                            <div class="tooltip tooltip-up">HypeSquad Balance</div>
                                         </div>
                                         <div class="badge-item">
                                             <img src="img/badges/moderator.webp" alt="" />
@@ -110,31 +110,35 @@
                                     </p>
                                 </div>
                                 <div class="roles">
-                                    <div class="category-title">Roles</div>
+                                    <div class="category-title">Roles (Skills)</div>
                                     <div class="roles-list">
                                         <div class="role">
                                             <div class="color"></div>
-                                            Role title
+                                            HTML5
                                         </div>
                                         <div class="role">
                                             <div class="color"></div>
-                                            A long role title
+                                            CSS3
                                         </div>
                                         <div class="role">
                                             <div class="color"></div>
-                                            A very very very very long role title
+                                            JavaScript
                                         </div>
                                         <div class="role">
                                             <div class="color"></div>
-                                            Role title
+                                            Node.js
                                         </div>
                                         <div class="role">
                                             <div class="color"></div>
-                                            Role title
+                                            Vue.js
                                         </div>
                                         <div class="role">
                                             <div class="color"></div>
-                                            Role title
+                                            PHP
+                                        </div>
+                                        <div class="role">
+                                            <div class="color"></div>
+                                            Yii2
                                         </div>
                                     </div>
                                 </div>
@@ -159,54 +163,50 @@
                         <img src="gif/developer_funny.gif" id="dev_funny_gif" />
                     </div>
                 </header>
-                <main class="">
+                <main class="display-flex justify-content-center">
 
-                    <div class="info">
-                        <input class="info-input js-input" id="nbv" name="info-input" type="radio" checked="" />
-                        <input class="info-input js-input" id="proddaz" name="info-input" type="radio" />
-                        <input class="info-input js-input" id="phenixgames" name="info-input" type="radio" />
-                        <input class="info-input js-input" id="phenixgames_2" name="info-input" type="radio" />
-
-                        <ul class="info-tab">
-                            <label class="info-tab-label" for="nbv"><span class="info-tab-label-dot"></span></label>
-                            <label class="info-tab-label" for="proddaz"><span class="info-tab-label-dot"></span></label>
-                            <label class="info-tab-label" for="phenixgames"><span class="info-tab-label-dot"></span></label>
-                            <label class="info-tab-label" for="phenixgames_2"><span class="info-tab-label-dot"></span></label>
-                        </ul>
-                        <div class="info-arrow mod-left">
-                            <label class="info-arrow-label mod-left" for="nbv"></label>
-                            <label class="info-arrow-label mod-left" for="proddaz"></label>
-                            <label class="info-arrow-label mod-left" for="phenixgames"></label>
-                            <label class="info-arrow-label mod-left" for="phenixgames_2"></label>
-                        </div>
-                        <div class="info-arrow mod-right">
-                            <label class="info-arrow-label mod-right" for="nbv"></label>
-                            <label class="info-arrow-label mod-right" for="proddaz"></label>
-                            <label class="info-arrow-label mod-right" for="phenixgames"></label>
-                            <label class="info-arrow-label mod-right" for="phenixgames_2"></label>
-                        </div>
-                        <ul class="info-content">
-                            <li class="info-content-page js-image">
-                                <label class="info-content-page-arrow mod-left" for="info">
-                                    <span class="info-content-page-arrow"></span>
-                                </label>
-                                <img class="info-content-page-image" src="img/projects/nobadvibes_dark.png" draggable="false" />
+                    <div class="ism-slider" data-interval="10000" id="my-slider">
+                        <ol>
+                            
+                            <li>
+                                <a href="/projects/prodbydaz"><img src="img/projects/prodbydaz.png"></a>
+                                <div class="ism-caption ism-caption-0 bold">Prodbydaz (Shop)</div>
                             </li>
-                            <li class="info-content-page js-image">
-                                <img class="info-content-page-image" src="img/projects/prodbydaz_dark.png" draggable="false" />
+                            <li>
+                                <a href="/projects/nobadvibes"><img src="img/projects/nobadvibes.png"></a>
+                                <div class="ism-caption ism-caption-0 bold">nobadVIBES (Fake-Shop, Showcase)</div>
                             </li>
-                            <li class="info-content-page js-image">
-                                <img class="info-content-page-image" src="img/projects/phenixgames.png" draggable="false" />
+                            <li>
+                                <a href="/projects/changerjs"><img src="img/projects/changerjs.png"></a>
+                                <div class="ism-caption ism-caption-0 bold">Changer.js (Mini-Library)</div>
                             </li>
-                            <li class="info-content-page js-image">
-                                <img class="info-content-page-image" src="img/projects/phenixgames.png" draggable="false" />
+                            <li>
+                                <a href="/projects/prodbydaz"><img src="img/projects/phenixgames_dark.png"></a>
+                                <div class="ism-caption ism-caption-0 bold">PhenixGames Homepage</div>
                             </li>
-                        </ul>
-                    </div>
+                            <li>
+                                <a href="/projects/phenixgamesteam"><img src="img/projects/pg_teambereich_dark.png"></a>
+                                <div class="ism-caption ism-caption-0 bold">PhenixGames Teambereich</div>
+                            </li>
+                            <li>
+                                <a href="/projects/subscriptor"><img src="img/projects/subscriptor_startseite.png"></a>
+                                <div class="ism-caption ism-caption-0 bold">Subscriptor - Abonnement Verwaltung</div>
+                            </li>
+                            <li>
+                                <a href="/projects/easylogindesign"><img src="img/projects/easylogin.png"></a>
+                                <div class="ism-caption ism-caption-0 bold">Easy Login Design</div>
+                            </li>
+                            <li>
+                                <a href="/projects/redesign"><img src="img/projects/redesign.png"></a>
+                                <div class="ism-caption ism-caption-0 bold">Redesign (Schulprojekt)</div>
+                            </li>
+                        </ol>
+                      </div>
                 </main>
             </div>
         </main>
         <script src="js/main.js"></script>
+        <script src="js/ism-2.2.min.js"></script>
     </body>
 
 </html>
