added legal stuff

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -205,6 +205,9 @@
                 </main>
             </div>
         </main>
+        <footer>
+            <span><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a></span>
+        </footer>
         <script src="js/main.js"></script>
         <script src="js/ism-2.2.min.js"></script>
     </body>
