--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,3 +190,15 @@ html {
   width: 100%;
   border: 6px solid black;
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+}
+
+.privacy,
+.impressum {
+  margin: 50px auto;
+  width: 50%;
+}
