added seperate head file

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,9 +2,8 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <%- include('./_head/head.ejs') %>
+        <title>BlackDayz - Junior Web Developer.</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/slider/my-slider.css" />
         <link rel="stylesheet" href="css/dc_profile/dc_profile.css" />
@@ -206,7 +205,8 @@
             </div>
         </main>
         <footer>
-            <span><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a></span>
+            <p><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a></p>
+            <p>BlackDayz &copy; 2021</p>
         </footer>
         <script src="js/main.js"></script>
         <script src="js/ism-2.2.min.js"></script>
