--- a/src/views/legal/impressum.ejs
+++ b/src/views/legal/impressum.ejs
@@ -1,38 +1,8 @@
 <html>
 
     <head>
-        <title>Datenschutz &bull; BlackDayz &hybull; Video Creator und Entwickler</title>
-
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="copyright" content="BlackDayz &copy; 2020">
-        <meta http-equiv="content-language" content="de">
-        <meta name="author" content="BlackDayz &copy;" />
-        <meta name="robots" content="index, follow" />
-        <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="31536000">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description"
-            content="BlackDayz - Video Creator und Entwickler. Immer auf der Suche nach dem besten Ergebnis.">
-        <meta name="keywords"
-            content="video, video Creator, Creator, künstler, musikvideos, eventvideos, Imagefilme, ichsuchearbeit, web, webentwickler, Web Entwickler, html, css, javascript, php, apps, App Developer, flutter, Dart, Flutter und Dart, blackdayz, blackdayz_de, blackdayz.de">
-        <meta name="reply-to" content="info@blackdayz.de">
-
-        <!--Open Graph-->
-        <meta property="og:site_name" content="BlackDayz" />
-        <meta property="og:image" content="https://www.blackdayz.de/src/img/logo/BlackDayzLogo.png">
-        <meta property="og:title" content="BlackDayz &hybull; Video Creator und Entwickler">
-        <meta property="og:description"
-            content="BlackDayz - Video Creator und Entwickler. Immer auf der Suche nach dem besten Ergebnis.">
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://www.blackdayz.de/" />
-        <meta property="og:locale" content="de_DE" />
-
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="BlackDayz &hybull; Video Creator und Entwickler" />
-        <meta name="twitter:description"
-            content="BlackDayz - Video Creator und Entwickler. Immer auf der Suche nach dem besten Ergebnis.">
-        <meta name="twitter:image" content="https://www.blackdayz.de/src/img/logo/BlackDayzLogo.png" />
-
+        <title>Datenschutz &bull; BlackDayz</title>
+        <%- include('../_head/head.ejs') %>
         <link href="../css/style.css" rel="stylesheet" />
     </head>
 
