--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,9 +192,9 @@ html {
 }
 
 footer {
-  display: flex;
+  display: grid;
   justify-content: center;
-  padding: 30px 0;
+  padding: 10px 0;
 }
 
 .privacy,
