--- a/src/views/projects/redesign.ejs
+++ b/src/views/projects/redesign.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <%- include('../_head/head.ejs') %>
         <title>Redesign (Schulprojekt)</title>
         <link href="../css/style.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://use.typekit.net/xue1nky.css">
