added blackcss & added logo / shortcuticon

--- a/src/views/_head/head.ejs
+++ b/src/views/_head/head.ejs
@@ -17,24 +17,22 @@
 <meta name="robots" content="index, follow" />
 <meta http-equiv="cache-control" content="31536000">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description"
-    content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis.">
-<meta name="keywords"
-    content="ichsuchearbeit, web, webentwickler, Web Entwickler, html, css, javascript, php, blackdayz, blackdayz_de, blackdayz.de, nodejs, vue3, yii2">
+<meta name="description" content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis.">
+<meta name="keywords" content="ichsuchearbeit, web, webentwickler, Web Entwickler, html, css, javascript, php, blackdayz, blackdayz_de, blackdayz.de, nodejs, vue3, yii2">
 <meta name="reply-to" content="info@blackdayz.de">
 
 <!--Open Graph-->
 <meta property="og:site_name" content="BlackDayz" />
-<meta property="og:image" content="https://www.blackdayz.de/src/img/logo/BlackDayzLogo.png">
+<meta property="og:image" content="img/logo/BlackDayzLogo.png">
 <meta property="og:title" content="BlackDayz &hybull; Junior Web Developer">
-<meta property="og:description"
-    content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis.">
+<meta property="og:description" content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis.">
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.blackdayz.de/" />
 <meta property="og:locale" content="de_DE" />
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="BlackDayz &hybull; Junior Web Developer" />
-<meta name="twitter:description"
-    content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis.">
-<meta name="twitter:image" content="https://www.blackdayz.de/src/img/logo/BlackDayzLogo.png" />
+<meta name="twitter:description" content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis.">
+<meta name="twitter:image" content="img/logo/BlackDayzLogo.png" />
+
+<link rel="stylesheet" href="https://blackdayz.github.io/BlackCSS/lib/BlackCSS.css" />
