--- a/src/views/projects/phenixgamesteam.ejs
+++ b/src/views/projects/phenixgamesteam.ejs
@@ -15,7 +15,7 @@
                 <p>
                     ... hinter diesem Projekt, ist ein Bereich für Teammitglieder des Projektes. Dort kann man In-Game relevante Informationen eines Spielers oder eines Fahzeuges ändern (z.B. einen Spieler bannen oder ein Fahrzeug löschen). Forum Beiträge erstellen, Bewerbungen/Anträge einsehen, annehmen oder ablehnen, Webseitbezogenen Daten ändern und Logs einschauen.<br />
                     Die neue Herausforderung war das Arbeiten mit getrenntem Frontend- und Backendsystem. Zuvor hatte ich dies nur in meinem Praktikumsprojekt ausprobieren können.<br />
-                    Leider habe ich es nicht mehr geschafft das Projekt ordentlich aufzusetzten. Deswegen habe ich ein Video von der Seite erstellt in der Development 
+                    Leider habe ich es nicht mehr geschafft das Projekt ordentlich aufzusetzten. Deswegen habe ich ein Video von der Seite erstellt in der Development-Umgebung
 
                 </p>
                 <div class="p_links">
