--- a/public/css/dc_profile/dc_profile.css
+++ b/public/css/dc_profile/dc_profile.css
@@ -47,6 +47,7 @@
     box-shadow: 0px 0px 16px 3px rgba(0, 0, 0, 0.2);
     overflow: auto;
     scrollbar-width: none;
+    margin: 0 0 0 18%;
   }
   
   .card::-webkit-scrollbar {
