--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,12 +19,12 @@
             </div>
             <div class="head_arrows cursor-pointer">
                 <p>Grab some fresh news about me!</p>
-                <img src="img/icons/double-down-arrow-24px.png" />
+                <a href="#me"><img src="img/icons/double-down-arrow-24px.png" /></a>
             </div>
         </header>
         <main>
 
-            <div class="about_me">
+            <div class="about_me" id="me">
 
                 <div class="about_me_left white">
                     <p><img src="img/icons/hello-48.png" width="42" /> Hey, my name is obviously Mittelblut9 I'm 19
