--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/slider/my-slider.css" />
         <link rel="stylesheet" href="css/dc_profile/dc_profile.css" />
-        <link rel="stylesheet" href="https://www.blackdayz.de/Library/CSS/V0_0_1/BlackCSS.css" />
     </head>
 
     <body>
@@ -204,10 +203,7 @@
                 </main>
             </div>
         </main>
-        <footer>
-            <p><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a></p>
-            <p>BlackDayz &copy; 2022</p>
-        </footer>
+        <%- include('./_footer/footer.ejs') %>
         <script src="js/main.js"></script>
         <script src="js/ism-2.2.min.js"></script>
     </body>
