added shortcut icon

--- a/src/views/_head/head.ejs
+++ b/src/views/_head/head.ejs
@@ -35,4 +35,7 @@
 <meta name="twitter:description" content="BlackDayz - Junior Web Developer. Immer auf der Suche nach dem besten Ergebnis.">
 <meta name="twitter:image" content="img/logo/BlackDayzLogo.png" />
 
+<link rel="shortcut icon" href="img/logo/shortcuticon.png">
+<link rel="apple-touch-icon" href="img/logo/shortcuticon.png" />
+
 <link rel="stylesheet" href="https://blackdayz.github.io/BlackCSS/lib/BlackCSS.css" />
