--- a/src/views/_footer/footer.ejs
+++ b/src/views/_footer/footer.ejs
@@ -1,6 +1,5 @@
 <footer>
-    <p><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a></p>
-    <p>BlackDayz &copy; 2022</p>
+    <p><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a> | <strong>BlackDayz &copy; 2022</strong></p>
     <span>
         <a title="BlackDayz Instagram" href="https://www.instagram.com/blackdayz_de/"><img src="https://img.icons8.com/material-outlined/24/000000/instagram-new--v1.png"/></a>
         <a title="Mittelblut9 Youtube" href="https://www.youtube.com/channel/UCVXebEQVI5N6-CV7Pnj7J8w"><img src="https://img.icons8.com/material-outlined/24/000000/youtube-play--v1.png"/></a>
