changed from link to svg

--- a/src/views/_footer/footer.ejs
+++ b/src/views/_footer/footer.ejs
@@ -1,11 +1,11 @@
 <footer>
     <p><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a> | <strong>BlackDayz &copy; 2022</strong></p>
     <span>
-        <a title="BlackDayz Instagram" href="https://www.instagram.com/blackdayz_de/"><img src="https://img.icons8.com/material-outlined/24/000000/instagram-new--v1.png"/></a>
-        <a title="Mittelblut9 Youtube" href="https://www.youtube.com/channel/UCVXebEQVI5N6-CV7Pnj7J8w"><img src="https://img.icons8.com/material-outlined/24/000000/youtube-play--v1.png"/></a>
-        <a title="Mitteblut9 Discord name" id="copy_dcname" class="cursor-pointer"><img src="https://img.icons8.com/windows/24/000000/discord-logo.png"/></a>
-        <a title="BlackDayz Xing" href="https://www.xing.com/profile/Benedikt_Sauer12/"><img src="https://img.icons8.com/small/24/000000/xing.png"/></a>
-        <a title="BlackDayz GitHub" href="https://github.com/Mittelblut9"><img src="https://img.icons8.com/material-outlined/24/000000/github.png"/></a>
-        <a title="Page Source Code" href="https://github.com/BlackDayz/BlackDayz-Homepage"><img src="https://img.icons8.com/material-outlined/24/000000/code.png"/></a>
+        <a title="BlackDayz Instagram" href="https://www.instagram.com/blackdayz_de/"><img src="svg/social_media/icons8-instagram.svg"/></a>
+        <a title="Mittelblut9 Youtube" href="https://www.youtube.com/channel/UCVXebEQVI5N6-CV7Pnj7J8w"><img src="svg/social_media/icons8-youtube.svg"/></a>
+        <a title="Mitteblut9 Discord name" id="copy_dcname" class="cursor-pointer"><img src="svg/social_media/icons8-discord.svg"/></a>
+        <a title="BlackDayz Xing" href="https://www.xing.com/profile/Benedikt_Sauer12/"><img src="svg/social_media/icons8-xing.svg"/></a>
+        <a title="BlackDayz GitHub" href="https://github.com/Mittelblut9"><img src="svg/social_media/icons8-github.svg"/></a>
+        <a title="Page Source Code" href="https://github.com/BlackDayz/BlackDayz-Homepage"><img src="svg/social_media/source_code.svg"/></a>
     </span>
 </footer>
