--- a/src/views/_footer/footer.ejs
+++ b/src/views/_footer/footer.ejs
@@ -6,6 +6,6 @@
         <a title="Mitteblut9 Discord name" id="copy_dcname" class="cursor-pointer"><img src="svg/social_media/icons8-discord.svg"/></a>
         <a title="BlackDayz Xing" href="https://www.xing.com/profile/Benedikt_Sauer12/"><img src="svg/social_media/icons8-xing.svg"/></a>
         <a title="BlackDayz GitHub" href="https://github.com/Mittelblut9"><img src="svg/social_media/icons8-github.svg"/></a>
-        <a title="Page Source Code" href="https://github.com/BlackDayz/BlackDayz-Homepage"><img src="svg/social_media/source_code.svg"/></a>
+        <a title="Page Source Code" href="https://github.com/BlackDayz/BlackDayz-Homepage"><img src="svg/social_media/source_code.svg" width="24"/></a>
     </span>
 </footer>
