added mittelbot to projects

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -198,6 +198,10 @@
                                 <a href="/projects/redesign"><img src="img/projects/redesign.png"></a>
                                 <div class="ism-caption ism-caption-0 bold">Redesign (Schulprojekt)</div>
                             </li>
+                            <li>
+                                <a href="/projects/mittelbot"><img src="img/projects/mittelbot.png" width="100%"></a>
+                                <div class="ism-caption ism-caption-0 bold">Mittelbot - Discord Bot</div>
+                            </li>
                         </ol>
                       </div>
                 </main>
