add class to html & moved dc profile to another file

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,13 +10,13 @@
     </head>
 
     <body>
-        <header class="top_page">
-            <div class="head_text">
-                <h1 class="black">BlackDayz.de</h1>
+        <header class="top_page width-100">
+            <div class="head_text center absolute">
+                <h1 class="black text-transform-up">BlackDayz</h1>
                 <p><span class="red">Junior</span> Web Developer, <span class="red">Junior</span> Discord Bot Developer,
                     Discord Moderator</p>
             </div>
-            <div class="head_arrows cursor-pointer">
+            <div class="head_arrows center absolute">
                 <p>Grab some fresh news about me!</p>
                 <a href="#me"><img src="img/icons/double-down-arrow-24px.png" /></a>
             </div>
@@ -25,7 +25,7 @@
 
             <div class="about_me" id="me">
 
-                <div class="about_me_left white">
+                <div class="about_me_left white left">
                     <p><img src="img/icons/hello-48.png" width="42" /> Hey, my name is obviously Mittelblut9 I'm 19
                         years
                         old and a <span class="red">Junior</span> Web Developer living in Germany</p>
@@ -38,118 +38,8 @@
                 </div>
 
 
-                <div class="about_me_right">
-                    <div class="card-container">
-                        <div class="card">
-                            <div class="card-header">
-                                <div style="background: url('gif/banner.gif')" class="banner-image"></div>
-                                <div class="infos">
-                                    <div class="profil-logo">
-                                        <img src="img/logo.png" />
-                                    </div>
-                                    <div class="badges-container">
-                                        <!-- <div class="badge-item">
-                                        <img src="img/badges/team.webp" alt="" />
-                                        <div class="tooltip tooltip-up"></div>
-                                    </div>
-                                    <div class="badge-item">
-                                        <img src="img/badges/partner.webp" alt="" />
-                                        <div class="tooltip tooltip-up">Tooltip</div>
-                                    </div>
-                                    <div class="badge-item">
-                                        <img src="img/badges/megabughunter.webp" alt="" />
-                                        <div class="tooltip tooltip-up">Tooltip</div>
-                                    </div>
-                                    <div class="badge-item">
-                                        <img src="img/badges/eventcreator.webp" alt="" />
-                                        <div class="tooltip tooltip-up">Tooltip</div>
-                                    </div> -->
-                                        <div class="badge-item">
-                                            <img src="img/badges/hypesquad.webp" alt="" />
-                                            <div class="tooltip tooltip-up">HypeSquad Balance</div>
-                                        </div>
-                                        <div class="badge-item">
-                                            <img src="img/badges/moderator.webp" alt="" />
-                                            <div class="tooltip tooltip-up">Non-verified Discord Moderator</div>
-                                        </div>
-                                        <!-- <div class="badge-item">
-                                        <img src="img/badges/firsttimenitro.webp" alt="" />
-                                        <div class="tooltip tooltip-up"></div>
-                                    </div> -->
-                                        <div class="badge-item">
-                                            <img src="img/badges/nitro.webp" alt="" />
-                                            <div class="tooltip tooltip-up">Discord Nitro user</div>
-                                        </div>
-                                        <div class="badge-item">
-                                            <img src="img/badges/boost.webp" alt="" />
-                                            <div class="tooltip tooltip-up">Website boosting since 2019</div>
-                                        </div>
-                                    </div>
-                                    <div class="username">Mittelblut9<span>#1974</span></div>
-                                    <hr />
-                                </div>
-                            </div>
-                            <div class="card-content">
-                                <div class="about-me">
-                                    <div class="category-title">About Me</div>
-                                    <p>
-                                        🧑‍💻<strong>Web Dev</strong> - <i>vue3, nodejs, php</i><br />
-                                        🛠️ <strong>Moderator</strong> <br />
-                                        🛡️ <i><a href="https://www.yaeow.com/" class="link white" target="_blank"
-                                                rel="nofollow">yaeow</a>, <a href="https://biglink.to/chilledsad"
-                                                class="link white" target="_blank" rel="nofollow">chilledsad</a>, <a
-                                                href="https://www.youtube.com/c/nostalgicmusic" class="link white"
-                                                target="_blank" rel="nofollow">nostalgic</a>, <a
-                                                href="https://www.youtube.com/channel/UCz-rxehhsrMAyBEJdf4NG2w"
-                                                class="link white" target="_blank"
-                                                rel="nofollow">thegoodvibe</a></i><br />
-                                        🧑‍💻 <strong>Bot Developer</strong><br />
-                                        🤖 Mittelbot <strong>BETA</strong>
-                                    </p>
-                                </div>
-                                <div class="roles">
-                                    <div class="category-title">Roles (Skills)</div>
-                                    <div class="roles-list">
-                                        <div class="role">
-                                            <div class="color"></div>
-                                            HTML5
-                                        </div>
-                                        <div class="role">
-                                            <div class="color"></div>
-                                            CSS3
-                                        </div>
-                                        <div class="role">
-                                            <div class="color"></div>
-                                            JavaScript
-                                        </div>
-                                        <div class="role">
-                                            <div class="color"></div>
-                                            Node.js
-                                        </div>
-                                        <div class="role">
-                                            <div class="color"></div>
-                                            Vue.js
-                                        </div>
-                                        <div class="role">
-                                            <div class="color"></div>
-                                            PHP
-                                        </div>
-                                        <div class="role">
-                                            <div class="color"></div>
-                                            Yii2
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="note">
-                                    <div class="category-title">Note</div>
-                                    <textarea placeholder="Click for add a note"></textarea>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                <input type="text" placeholder="Send a message to @Mittelblut9" />
-                            </div>
-                        </div>
-                    </div>
+                <div class="about_me_right right">
+                    <%- include('./_dc_profile/dc_profile.ejs') %>
                 </div>
             </div>
 
@@ -157,7 +47,7 @@
                 <header class="center">
                     <h2>My work</h2>
 
-                    <div class="ref_gif_top">
+                    <div class="ref_gif_top display-flex justify-content-center">
                         <img src="gif/developer_funny.gif" id="dev_funny_gif" />
                     </div>
                 </header>
