--- a/src/views/_footer/footer.ejs
+++ b/src/views/_footer/footer.ejs
@@ -1,6 +1,6 @@
-<footer>
+<footer class="display-grid justify-content-center">
     <p><a href="/impressum" class="link black">Impressum</a> | <a href="/privacy" class="link black">privacy</a> | <strong>BlackDayz &copy; 2022</strong></p>
-    <span>
+    <span class="display-flex justify-content-center">
         <a title="BlackDayz Instagram" href="https://www.instagram.com/blackdayz_de/"><img src="svg/social_media/icons8-instagram.svg"/></a>
         <a title="Mittelblut9 Youtube" href="https://www.youtube.com/channel/UCVXebEQVI5N6-CV7Pnj7J8w"><img src="svg/social_media/icons8-youtube.svg"/></a>
         <a title="Mitteblut9 Discord name" id="copy_dcname" class="cursor-pointer"><img src="svg/social_media/icons8-discord.svg"/></a>
