--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -92,6 +92,10 @@
                                 <a href="/projects/mittelbot"><img src="img/projects/mittelbot.png" width="100%"></a>
                                 <div class="ism-caption ism-caption-0 bold">Mittelbot - Discord Bot</div>
                             </li>
+                            <li>
+                                <a href="/projects/la_campana_unofficial_design"><img src="img/projects/la_campana_design.png" width="100%"></a>
+                                <div class="ism-caption ism-caption-0 bold">La Campana Website Design (unofficial)</div>
+                            </li>
                         </ol>
                       </div>
                 </main>
