--- a/public/css/slider/my-slider.css
+++ b/public/css/slider/my-slider.css
@@ -545,6 +545,18 @@ p.ism-badge a.ism-link:hover {
   -webkit-animation: fadein 0.5s; animation: fadein 0.5s;
 }
 
+#my-slider .ism-slide-9 .ism-caption-0.ism-caption-anim {
+  -webkit-animation: fadein 0.5s; animation: fadein 0.5s;
+}
+
+#my-slider .ism-slide-9 .ism-caption-1.ism-caption-anim {
+  -webkit-animation: fadein 0.5s; animation: fadein 0.5s;
+}
+
+#my-slider .ism-slide-9 .ism-caption-2.ism-caption-anim {
+  -webkit-animation: fadein 0.5s; animation: fadein 0.5s;
+}
+
 #my-slider .ism-slide-0 .ism-caption-0 {
     font-size: 1.25em;
     
@@ -805,6 +817,36 @@ p.ism-badge a.ism-link:hover {
 }
 
 #my-slider .ism-slide-8 .ism-caption-2 {
+  font-size: 1.25em;
+  font-family: sans-serif;
+  position: absolute; top: 20%;
+  left: 60%;
+  border-radius: 4px;
+  border: none;
+  color: #fff; background-color: rgba(0, 0, 0, 0.70);
+}
+
+#my-slider .ism-slide-9 .ism-caption-0 {
+  font-size: 1.25em;
+  
+  position: absolute; top: 80%;
+  left: 0%;
+  border-radius: 4px;
+  border: none;
+  color: #000; background-color: rgba(255, 255, 255, 1.0);
+}
+
+#my-slider .ism-slide-9 .ism-caption-1 {
+  font-size: 1.25em;
+  font-family: sans-serif;
+  position: absolute; top: 60%;
+  left: 40%;
+  border-radius: 4px;
+  border: none;
+  color: #fff; background-color: rgba(0, 0, 0, 0.70);
+}
+
+#my-slider .ism-slide-9 .ism-caption-2 {
   font-size: 1.25em;
   font-family: sans-serif;
   position: absolute; top: 20%;
